# smack-sh

./: .env.example  .eslintrc.cjs  .gitignore  .jshintrc  ERRORS_FOUND.md  FIXES_APPLIED.md  README.md  emptyUtilTypes.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pre-start.cjs  vite.config.ts  vite.config.ts.timestamp-1770646000427-8fb67783ad3a18.mjs
.github/workflows/: auto-assign.yml
app/: root.tsx
app/components/assistant/: AIPanel.client.tsx
app/components/auth/: ThreeStepLogin.tsx
app/components/chat/: Artifact.tsx  AssistantMessage.tsx  BaseChat.module.css  BaseChat.tsx  (+6 more)
app/config/: database.ts  env.server.ts
app/models/: terminal.server.ts
app/routes/: _index.tsx  admin._index.tsx  api.auth.status.ts  api.auth.step1.ts  api.auth.step2.send.ts  api.auth.step2.verify.ts  api.auth.step3.initiate.ts  api.auth.step3.verify.ts  api.builders.desktop.ts  api.builders.flutter.ts  api.builders.game.ts  api.builders.jobs.$id.ts  api.builders.jobs.ts  api.builders.react-native.ts  api.chat.ts  api.llmcall.ts  api.python.execute.ts  builders.tsx  chat._index.tsx  chat.tsx  dashboard.tsx  sign-in.sso-callback.tsx  sign-in.tsx  sign-up.sso-callback.tsx  sign-up.tsx  sso-callback.tsx  three-step-login.tsx
app/services/: firebase.server.ts
app/styles/: animations.css  index.css  mobile.css  variables.css
app/types/: ai-compat.d.ts  ai-compat.ts
app/utils/: clerk-key.ts  constants.ts  email.server.ts  projectCommands.ts  sanitize.ts
docs/: tauri-migration.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+63 files in other folders)
