[package]
name = "smack-tauri"
version = "0.1.0"
description = "Smack desktop runtime powered by Tauri"
authors = ["smack.sh team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0", features = [] }

[features]
default = []

